K3s/Ingress/Traefik/without-cert-manager/whoami1-httproute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami1-ingress
  namespace: default

spec:
  entryPoints:
    - web
  routes:
  - match: Path(`/`)
    kind: Rule
    services:
    - name: whoami1
      port: 80
